Home style sheet

--- a/Mission/Views/Home/Index.cshtml
+++ b/Mission/Views/Home/Index.cshtml
@@ -2,19 +2,8 @@
     ViewBag.Title = "Home Page";
 }
 <head>
-    <style>
-        .jumbotron {
-            background-image: url('../../Content/Images/Wood.jpg');
-            background-size: cover;
-            color: white;
-        }
-
-        .YoTube{
-            text-align: center;
-        }
-    </style>
+    <link href="~/Content/Home.css" rel="stylesheet" />
 </head>
-
 <body>
 
 
