Fixed Home and Layout

--- a/Mission/Views/Home/Index.cshtml
+++ b/Mission/Views/Home/Index.cshtml
@@ -31,6 +31,8 @@
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
+<br />
 <div class="YoTube">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/W0-0nniCz6k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h2>Find out what to expect in the Missionary Training Center (MTC)</h2>
+    <iframe width="840" height="472" src="https://www.youtube.com/embed/W0-0nniCz6k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
