--- a/Mission/Views/Home/Index.cshtml
+++ b/Mission/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="jumbotron">
     <h1>Are You Ready for Your Mission?</h1>
     <p class="lead">Before getting to the mission field you may have tons of questions. Let us help you get all the questions you have answered before you head out.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Find your mission!</a></p>
+    <p><a href="@Url.Action("Mission","Home")" class="btn btn-primary btn-lg">Find your mission!</a></p>
 </div>
 
 <div class="row">
@@ -18,7 +18,7 @@
             Every missionary gets to their mission almost in the dark. We want to help you not only learn more about what missions are in general but also
             to remove your worries, doubts and general questions about the experience.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="@Url.Action("Mission","Home")">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Mission Gear</h2>
@@ -28,7 +28,7 @@
     <div class="col-md-4">
         <h2>Contact Us</h2>
         <p>Feel free to contact us with custom questions that you have and we will try our best to answer them or find someone who can answer them.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="@Url.Action("Contact","Home")">Learn more &raquo;</a></p>
     </div>
 </div>
 <br />
