--- a/Mission/Views/Home/Index.cshtml
+++ b/Mission/Views/Home/Index.cshtml
@@ -2,37 +2,42 @@
     ViewBag.Title = "Home Page";
 }
 <head>
-    <link href="~/Content/Home.css" rel="stylesheet" />
+    <link href="~/Content/StyleSheet1.css" rel="stylesheet" />
 </head>
-
-<div class="jumbotron">
-    <h1>Are You Ready for Your Mission?</h1>
-    <p class="lead">Before getting to the mission field you may have tons of questions. Let us help you get all the questions you have answered before you head out.</p>
-    <p><a href="@Url.Action("Mission","Home")" class="btn btn-primary btn-lg">Find your mission!</a></p>
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Mission FAQ's</h2>
-        <p>
-            Every missionary gets to their mission almost in the dark. We want to help you not only learn more about what missions are in general but also
-            to remove your worries, doubts and general questions about the experience.
-        </p>
-        <p><a class="btn btn-default" href="@Url.Action("Mission","Home")">Learn more &raquo;</a></p>
+<body>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <ul class="ul">
+            <li><a class="active">Index</a></li>
+            <li><a href="@Url.Action("Mission","Home")">Mission</a></li>
+            <li><a href="@Url.Action("MissionFAQ","Home")">MissionFAQ</a></li>
+            <li><a href="@Url.Action("Contact","Home")">Contact</a></li>
+            <li><a href="@Url.Action("About","Home")">About</a></li>
+        </ul>
     </div>
-    <div class="col-md-4">
-        <h2>Mission Gear</h2>
-        <p>One of the hard things about preparing is the gear you need. Check out Missionary Mall for some great packages for Elders and Sisters.</p>
-        <p><a class="btn btn-default" href="https://missionarymall.org/">Learn More &raquo;</a></p>
+    <div class="jumbotron">
+        <h1>Missionary</h1>
+        <p class="lead">(N.) People who leave their families for 2 years so others can be with theirs for ETERNITY</p>
+        <p><a href="https://lds.org" class="btn btn-primary btn-lg">Learn More &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Contact Us</h2>
-        <p>Feel free to contact us with custom questions that you have and we will try our best to answer them or find someone who can answer them.</p>
-        <p><a class="btn btn-default" href="@Url.Action("Contact","Home")">Learn more &raquo;</a></p>
+    <div class="row">
+        <div class="col-md-4">
+            <h2>Getting started</h2>
+            <p>
+                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
+                enables a clean separation of concerns and gives you full control over markup
+                for enjoyable, agile development.
+            </p>
+            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h2>Get more libraries</h2>
+            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h2>Web Hosting</h2>
+            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+            <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        </div>
     </div>
-</div>
-<br />
-<div class="YoTube">
-    <h2>Find out what to expect in the Missionary Training Center (MTC)</h2>
-    <iframe width="840" height="472" src="https://www.youtube.com/embed/W0-0nniCz6k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
+</body>
