--- a/Mission/Views/Home/About.cshtml
+++ b/Mission/Views/Home/About.cshtml
@@ -1,7 +1,34 @@
 ﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+                /**/
 
-<p>Use this area to provide additional information.</p>
+                ViewBag.Title = "About";
+}
+<head>
+    <link href="~/Content/StyleSheet1.css" rel="stylesheet" />
+    <link href="~/Content/About.css" rel="stylesheet" />
+</head>
+<body>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <ul class="ul">
+           <li><a href="@Url.Action("Index","Home")">Index</a></li>
+           <li><a href="@Url.Action("Mission","Home")">Mission</a></li>
+           <li><a href="@Url.Action("MissionFAQ","Home")">MissionFAQ</a></li>
+           <li><a href="@Url.Action("Contact","Home")">Contact</a></li>
+           <li><a class="active">About</a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="row">
+        <div class="column">
+            <img src="~/Content/Images/Up_Guy.jpg" width="400" height="400" />
+        </div>
+        <div class="column">
+            <p>
+                The Missionary Site was started by a couple of Information System Junior Core students to fulfill requirements for the Project 1 assignment in IS 403.
+                The idea for this site was born from the love for missionary work that Professor Anderson has and was carried out by Group 10 in Section 2.
+            </p>
+        </div>
+    </div>
+
+</body>
