--- a/Mission/Views/Home/About.cshtml
+++ b/Mission/Views/Home/About.cshtml
@@ -18,16 +18,23 @@
             </li>
         </ul>
     </div>
-
+    <div>
+        <h2>
+            About Us
+        </h2>
+    </div>
     <div class="row">
         <div class="column">
-            <img src="~/Content/Images/Up_Guy.jpg" width="400" height="400" />
+            <img src="~/Content/Images/Up_Guy.jpg" width="550" height="400" />
         </div>
         <div class="column">
-            <p>
-                The Missionary Site was started by a couple of Information System Junior Core students to fulfill requirements for the Project 1 assignment in IS 403.
-                The idea for this site was born from the love for missionary work that Professor Anderson has and was carried out by Group 10 in Section 2.
-            </p>
+            <h3>
+                The Missionary Site was created to help future missionaries get in touch with past missionaries to answer all thier burning desires.
+            </h3>
+            <br />
+            <h3>
+                Please visit the MissionFAQ page to ask all your questions.
+            </h3>
         </div>
     </div>
 
