--- a/Mission/Views/Home/MissionFAQ.cshtml
+++ b/Mission/Views/Home/MissionFAQ.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model Mission.Models.QA
+
 @{
     ViewBag.Title = ViewBag.Name + " FAQ";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -26,10 +27,19 @@
     <p>President: @ViewBag.President</p>
     <p>Mission Language: @ViewBag.Language</p>
     <p>Dominant Religion: @ViewBag.Religion</p>
-
+    <p>Q: How should I better prepare to proselyting in the field?</p>
+    <p> A: Be familiar with Preach My Gospel and apply those principles in your daily life.</p>
+    @using (Html.BeginForm())
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+        <p>Ask a question: @Html.TextAreaFor(x => x.Question)</p>
+        <input type="submit" value="Submit Your Question"/>
+    }
     @Html.Raw((String)ViewBag.Address)
     @Html.Raw((String)ViewBag.Weather)
 </body>
 <script>
     !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');
 </script>
+
